<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.davidetclement.age.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="36dp"
            tools:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/entrernom" />

        <TextView
            android:id="@+id/textViewSeks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexe"
            tools:textColor="@color/colorPrimary" />

        <RadioGroup

            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButtonH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/homme" />

            <RadioButton
                android:id="@+id/radioButtonF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/femme" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewDateNaiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datenaiss"
            tools:textColor="@color/colorPrimary" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculage"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="calculerAge"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
